--- a/styles/base.css
+++ b/styles/base.css
@@ -66,6 +66,16 @@ body {
 	background-color: #3d3d3d;
 }
 
+.logout-btn a {
+	background: #e8e8f8;
+    color: #454545;
+}
+
+.logout-btn a:hover {
+    background: #f1f1fd;
+	color: #454545;
+}
+
 
 .nav-items {
 	display: flex;
