--- a/styles/base.css
+++ b/styles/base.css
@@ -1,8 +1,10 @@
 body {
 	font-family: "Roboto", sans-serif;
-	margin: 0 20%;
+	width: 80%;
+	margin: 0 auto;
 	padding: 0;
 	background-color: #ffffff;
+
 }
 #main-header {
 	display: flex;
@@ -11,6 +13,8 @@ body {
 	background-color: #ffffff;
 	padding: 1.5rem 2.5rem;
 	border-bottom: 1px solid gainsboro;
+	min-width: 400px;
+	overflow: hidden;
 }
 
 #logo {
@@ -24,6 +28,12 @@ body {
 	text-decoration: none;
 	color: #464646;
 
+}
+
+
+#sidebar {
+	min-width: 100px;
+	overflow: hidden;
 }
 
 .btn a{
@@ -114,6 +124,10 @@ body {
 	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	border-radius: 10px;
+	height: auto;
+    aspect-ratio: 16 / 9;
+	min-width: 500px;
+    overflow: hidden;
 }
 #main-container {
 	display: flex;
@@ -161,6 +175,8 @@ ul li span {
 }
 #search-bar {
 	margin: 20px 0;
+	min-width: 200px;
+	overflow: hidden;
 }
 #search-bar form {
 	display: flex;
