--- a/styles/signup_success.css
+++ b/styles/signup_success.css
@@ -5,7 +5,8 @@
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 	border-radius: 8px;
 	padding: 3.5rem;
-	background-color: #fafafa;
+	/* background-color: #fafafa; */
+	display: block;
 }
 
 h1,p {
