Add & Update admin pages

--- a/styles/edit_post.css
+++ b/styles/edit_post.css
@@ -20,6 +20,7 @@ button[type="submit"] {
     cursor: pointer;
     border-radius: 4px;
 	color: rgb(56, 56, 56);
+	text-decoration: none;
 }
 
 #back-btn:hover {
