--- a/admin/styles/write_board.css
+++ b/admin/styles/write_board.css
@@ -76,11 +76,26 @@ button {
     background-color: #5a5a5a;
 	cursor: pointer;
 	border: none;
-	padding: 0.75rem 1.7rem;
+	padding: 0.5rem 1.5rem;
 	border-radius: 4px;
 	font-weight: bold;
+	margin-top: 1rem;
 }
 
 button:hover {
 	background-color: #686868;
+}
+
+.back-btn {
+	margin-top: 2rem;
+	padding: 10px 20px;
+    border: none;
+    background-color: #f0f0f0;
+    cursor: pointer;
+    border-radius: 4px;
+	color: #5a5a5a;
+}
+
+.back-btn:hover {
+	background-color: #e5e5e5;
 }
